--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">winnote</string>
+    <string name="app_name">AppNote</string>
     <string name="nombre_de_la_materia">Nombre de la materia</string>
     <string name="add">Agregar</string>
     <string name="close">Cancelar</string>
